# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml
.github/workflows/: python_ci.yml
page_analyzer/: app.py  models.py  parser_url.py  url_validator.py
page_analyzer/templates/: base.html  index.html  url.html  urls.html
templates/: base.html  index.html  url.html  urls.html
