[project]
authors = [
    {name = "Anna Myshkina", email = "annet.myskina@gmail.com"},
]
name = "hexlet-code"
version = "0.1.0"
description = "An application based on the Flask framework. It works out the basic principles of building modern websites based on the MVC architecture: working with routing, query handlers and a template engine, interacting with a database."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "Flask>=3.0.0",
    "gunicorn>=21.0.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.9",
    "validators>=0.22.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["page_analyzer"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "Q", "SIM", "TID", "ARG", "PTH"]
ignore = ["B008"]  # не проверять аргументы функций

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-flask>=1.2.0",
    "ruff>=0.5.0"
]