[project]
authors = [
    {name = "Anna Myshkina", email = "annet.myskina@gmail.com"},
]
name = "hexlet-code"
version = "0.1.0"
description = "An application based on the Flask framework. It works out the basic principles of building modern websites based on the MVC architecture: working with routing, query handlers and a template engine, interacting with a database."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "Flask>=3.0.0",
    "gunicorn>=24.1.1",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.9",
    "validators>=0.22.0",
    "requests>=2.32.5",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["page_analyzer"]

[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
preview = true
select = ["E", "F", "I", "C90", "B", "Q", "SIM", "TID", "ARG", "PTH"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[dependency-groups]
dev = [
    "pytest-flask>=1.2.0",
    "ruff>=0.14.14"
]